--- a/config.yaml
+++ b/config.yaml
@@ -2,11 +2,11 @@
 
 # If submitting to a different project to your default, uncomment line below
 # and change project code as appropriate; also set shortpath below
-# project: v45
+project: v45
 
 # Force payu to always find, and save, files in this scratch project directory
 # (you may need to add the corresponding PBS -l storage flag in sync_data.sh)
-# shortpath: /scratch/v45
+shortpath: /scratch/v45
 
 queue: normal
 walltime: 12:00:00
@@ -20,7 +20,7 @@ input: /g/data/ik11/inputs/access-om2/input_20210915/common_1deg_era5/
 submodels:
     - name: atmosphere
       model: yatm
-      exe: /g/data/v45/nah599/access-om2/src/libaccessom2/build/bin/yatm.exe
+      exe: /home/156/aek156/github/COSIMA/access-om2/bin/yatm_e9b6a5c.exe
       input:
             - /g/data/ik11/inputs/access-om2/input_20210915/common_1deg_era5
             - /g/data/qv56/replicas/input4MIPs/CMIP6/OMIP/MRI/MRI-JRA55-do-1-4-0/landIce/day/licalvf/gr/v20190429
@@ -28,13 +28,13 @@ submodels:
 
     - name: ocean
       model: mom
-      exe: /g/data/ik11/inputs/access-om2/bin/fms_ACCESS-OM_af3a94d_libaccessom2_a227a61.x
+      exe: /home/156/aek156/github/COSIMA/access-om2/bin/fms_ACCESS-OM-BGC_9b8ec93_libaccessom2_e9b6a5c.x
       input: /g/data/ik11/inputs/access-om2/input_20201102/mom_1deg
       ncpus: 216
 
     - name: ice
       model: cice5
-      exe: /g/data/ik11/inputs/access-om2/bin/cice_auscom_360x300_24p_2572851_libaccessom2_a227a61.exe
+      exe: /home/156/aek156/github/COSIMA/access-om2/bin/cice_auscom_360x300_24p_1a98130_libaccessom2_e9b6a5c.exe
       input: /g/data/ik11/inputs/access-om2/input_20201102/cice_1deg
       ncpus: 24
 
