--- a/config.yaml
+++ b/config.yaml
@@ -8,6 +8,10 @@ project: x77
 # (you may need to add the corresponding PBS -l storage flag in sync_data.sh)
 shortpath: /scratch/v45
 
+storage:
+      gdata:
+            - rt52
+
 queue: normal
 walltime: 12:00:00
 jobname: 1deg_era5
