--- a/config.yaml
+++ b/config.yaml
@@ -2,15 +2,15 @@
 
 # If submitting to a different project to your default, uncomment line below
 # and change project code as appropriate; also set shortpath below
-project: x77
+# project: v45
 
 # Force payu to always find, and save, files in this scratch project directory
 # (you may need to add the corresponding PBS -l storage flag in sync_data.sh)
-shortpath: /scratch/v45
+# shortpath: /scratch/v45
 
 queue: normal
 walltime: 12:00:00
-jobname: 1deg_era5
+jobname: 1deg_era5_iaf
 mem: 1000GB
 
 # Model configuration
@@ -20,7 +20,7 @@ input: /g/data/ik11/inputs/access-om2/input_20210915/common_1deg_era5/
 submodels:
     - name: atmosphere
       model: yatm
-      exe: /home/156/aek156/github/COSIMA/access-om2/bin/yatm_61b1f38.exe
+      exe: /g/data/ik11/inputs/access-om2/bin/yatm_61b1f38.exe
       input:
             - /g/data/ik11/inputs/access-om2/input_20210915/common_1deg_era5
             - /g/data/rt52/era5/single-levels/reanalysis/msdwswrf
@@ -40,13 +40,13 @@ submodels:
 
     - name: ocean
       model: mom
-      exe: /home/156/aek156/github/COSIMA/access-om2/bin/fms_ACCESS-OM-BGC_9b8ec93_libaccessom2_61b1f38.x
+      exe: /g/data/ik11/inputs/access-om2/bin/fms_ACCESS-OM-BGC_9b8ec93_libaccessom2_61b1f38.x
       input: /g/data/ik11/inputs/access-om2/input_20201102/mom_1deg
       ncpus: 216
 
     - name: ice
       model: cice5
-      exe: /home/156/aek156/github/COSIMA/access-om2/bin/cice_auscom_360x300_24p_1a98130_libaccessom2_61b1f38.exe
+      exe: /g/data/ik11/inputs/access-om2/bin/cice_auscom_360x300_24p_1a98130_libaccessom2_61b1f38.exe
       input: /g/data/ik11/inputs/access-om2/input_20201102/cice_1deg
       ncpus: 24
 
