--- a/metadata.yaml
+++ b/metadata.yaml
@@ -6,9 +6,9 @@ description: |-
   The configuration is based on that described in Kiss et al. (2020),
   https://doi.org/10.5194/gmd-13-401-2020, but with many improvements.
   Initial conditions are WOA13v2 potential temperature and practical salinity.
-  Run with JRA55-do v1.4.0 interannually-varying forcing with all solid runoff
+  Run with ERA5 interannually-varying forcing with all solid runoff
   converted to liquid runoff with no heat transfer.
-  Spin up starts 1 Jan 1958 and runs to 1 Jan 2019.
+  Spin up starts 1 Jan 1980 and runs to 1 Jan 2021.
 notes: |-
   Source code: https://github.com/COSIMA/access-om2
   License: Attribution-NonCommercial-NoDerivatives 4.0 International (http://creativecommons.org/licenses/by-nc-nd/4.0/legalcode)
@@ -26,5 +26,5 @@ keywords:
   - one
   - cosima
   - access-om2-1
-  - jra55-do-v1.4.0
+  - era5
   - iaf
