--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,6 @@
-contact: Add your name here
-email: Add your email address here
-created: Add the date you started the experiment here (YYYY-MM-DD)
+contact: Ryan Holmes
+email: ryan.holmes@bom.gov.au
+created: 2023-07-04
 description: |-
   1 degree ACCESS-OM2 global model configuration under interannual forcing.
   The configuration is based on that described in Kiss et al. (2020),
@@ -22,6 +22,7 @@ notes: |-
   which is supported by the Australian Government."
   (c) let us know of any publications which use these models or data so we can add them to our list:
   https://scholar.google.com/citations?hl=en&user=inVqu_4AAAAJ
+url: https://github.com/rmholmes/1deg_era5_iaf/tree/ryan_testing
 keywords:
   - one
   - cosima
